--- a/Python/Programmers/level1/workout clothes.ipynb
+++ b/Python/Programmers/level1/workout clothes.ipynb
@@ -3,48 +3,45 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3f1ada74",
+   "id": "e0314906",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lottos = [44, 1, 0, 0, 31, 25]; win_nums = [31, 10, 45, 1, 6, 19]\n",
-    "#lottos = [0, 0, 0, 0, 0, 0]; win_nums = [38, 19, 20, 40, 15, 25]\n",
-    "lottos = [45, 4, 35, 20, 3, 9]; win_nums = [20, 9, 3, 45, 4, 35]"
+    "n = 5\n",
+    "lost = [1,2,4]\n",
+    "reserve = [1,2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8deb7781",
+   "id": "ac1b1cd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(lottos, win_nums):\n",
-    "    answer = [0,0]\n",
-    "    ranking = [6,6,5,4,3,2,1]\n",
+    "def solution(n,lost,reserve):\n",
+    "    set_reserve = set(reserve) - set(lost)\n",
+    "    set_lost = set(lost) - set(reserve)\n",
     "    \n",
-    "    cnt = 0\n",
-    "    for i in lottos:\n",
-    "        if i in win_nums:\n",
-    "            cnt += 1\n",
-    "    answer[1] = ranking[cnt]\n",
+    "    for i in set_reserve:\n",
+    "        if (i-1) in set_lost:\n",
+    "            set_lost.remove(i-1)\n",
+    "        elif (i+1) in set_lost:\n",
+    "            set_lost.remove(i+1)\n",
     "    \n",
-    "    cnt += lottos.count(0)\n",
-    "    answer[0] = ranking[cnt]\n",
-    "    \n",
-    "    return answer"
+    "    return n-len(set_lost)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5d75d558",
+   "id": "0f14e06d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1]"
+       "4"
       ]
      },
      "execution_count": 3,
@@ -53,7 +50,7 @@
     }
    ],
    "source": [
-    "solution(lottos, win_nums)"
+    "solution(n,lost, reserve)"
    ]
   }
  ],
