--- a/Python/Programmers/level3/Connecting_Island.ipynb
+++ b/Python/Programmers/level3/Connecting_Island.ipynb
@@ -3,45 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e58e30b8",
+   "id": "0a61295c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1746459950.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/1m/c6k1f_pd4vx1v_sj8708f_jw0000gn/T/ipykernel_36415/1746459950.py\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    sorted(count.items(), key = lamda x: x[1], reverse=True)\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "\n",
     "n = 4\n",
-    "costs = [[0,1,1],[0,2,2],[1,2,5],[1,3,1],[2,3,8]]\n",
-    "\n",
+    "costs = [[0,1,1],[0,2,2],[1,2,5],[1,3,1],[2,3,8]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b6eb39a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def solution(n, costs):\n",
-    "    answer = 1\n",
+    "    # kruskal 알고리즘 https://gmlwjd9405.github.io/2018/08/29/algorithm-kruskal-mst.html\n",
+    "    # (cycle 찾기) union-find 알고리즘  https://gmlwjd9405.github.io/2018/08/31/algorithm-union-find.html\n",
     "    \n",
-    "    st = list(map(lambda x: x[0], costs)) + list(map(lambda x: x[1], costs))\n",
-    "    count = Counter(st)\n",
-    "    sorted(count.items(), key = lamda x : x[1], reverse=True)\n",
-    "    #print(count.values())\n",
-    "    print(count)\n",
-    "    #orted(str_list, key=lambda x : x[1]))\n",
+    "    costs = sorted(costs, key = lambda x: x[2])\n",
+    "    answer = costs[0][2]\n",
+    "    route = set([costs[0][0], costs[0][1]])\n",
     "    \n",
-    "    \n",
+    "    while len(route) != n:\n",
+    "        \n",
+    "        for i in range(1, len(costs)) :\n",
+    "            if costs[i][0] in route and costs[i][1] in route: # cycle 발생\n",
+    "                continue\n",
+    "                \n",
+    "            if costs[i][0] in route or costs[i][1] in route:\n",
+    "                route.update([costs[i][0], costs[i][1]])\n",
+    "                answer += costs[i][2]\n",
+    "                break\n",
     "    \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58f5d84e",
+   "execution_count": 2,
+   "id": "13afcb49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1}\n",
+      "{0, 1, 2}\n",
+      "{0, 1, 2, 3}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "solution(n, costs)"
    ]
@@ -49,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e81dc082",
+   "id": "249d3d6b",
    "metadata": {},
    "outputs": [],
    "source": []
