--- a/Python/Programmers/level2/MakingBigNumber.ipynb
+++ b/Python/Programmers/level2/MakingBigNumber.ipynb
@@ -18,24 +18,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(number, k):\n",
-    "    answer = ''\n",
-    "    # k+1까지 숫자 에서 제일 큰 수 뽑기 -> 그 앞에 나머지 지우기\n",
-    "    # k = k - (max의 index) 반복\n",
-    "    tmp = 0\n",
-    "    cnt = 0\n",
+    "def solution(numbers):\n",
+    "    '''\n",
+    "    ## 풀이 1\n",
+    "    answer = []\n",
+    "    num = sorted([str(i)*3 for i in numbers], reverse=True)\n",
     "    \n",
-    "    while k > 0:\n",
-    "        new_li = number[tmp:tmp+(k+1)]\n",
-    "        answer += max(new_li)\n",
-    "        cnt = new_li.index(max(new_li))\n",
-    "        tmp = (tmp+1) + cnt\n",
-    "        k = k-cnt\n",
+    "    for i in num:\n",
+    "        tmp = len(i)//3\n",
+    "        answer.append(i[:tmp])\n",
     "        \n",
-    "        if k == 0 : \n",
-    "            answer += number[tmp:]\n",
-    "        \n",
-    "    return (answer)"
+    "    answer = str(int(''.join(answers)))\n",
+    "    '''\n",
+    "    \n",
+    "    numbers = list(map(str, numbers))\n",
+    "    numbers.sort(key = lambda x : x*3, reverse=True)\n",
+    "    answer = str(int(''.join(numbers))) # 0000을 0으로 바꾸기 위해 int를 해줌!\n",
+    "    return answer"
    ]
   },
   {
